[gd_scene load_steps=10 format=3 uid="uid://bug7nsohlajhg"]

[ext_resource type="Script" uid="uid://celv11jruaedo" path="res://data/scripts/ui.gd" id="1_jlrtr"]
[ext_resource type="Texture2D" uid="uid://c2miiwhbct63l" path="res://data/textures/icons/morale-icons-dummy-happy.png" id="1_udgi0"]
[ext_resource type="Texture2D" uid="uid://bxho6slt13oec" path="res://data/textures/icons/morale-icons-dummy-ok.png" id="2_jlrtr"]
[ext_resource type="Shader" uid="uid://c78uros544rvj" path="res://data/shaders/colour_tint.gdshader" id="2_rsqs2"]
[ext_resource type="Texture2D" uid="uid://fxuir013gltu" path="res://data/textures/icons/morale-icons-dummy-sad.png" id="3_rsqs2"]

[sub_resource type="LabelSettings" id="LabelSettings_wsfip"]
font_size = 24
font_color = Color(0.117647, 0.117647, 0.117647, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_lqoyg"]
shader = ExtResource("2_rsqs2")
shader_parameter/colour = Color(0.0232387, 0.920314, 0.26328, 1)
shader_parameter/fade = 1.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_l7oun"]
shader = ExtResource("2_rsqs2")
shader_parameter/colour = Color(0.974847, 0.540014, 0.192555, 1)
shader_parameter/fade = 1.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_sy17w"]
shader = ExtResource("2_rsqs2")
shader_parameter/colour = Color(1, 0.160507, 0.21861, 1)
shader_parameter/fade = 1.0

[node name="UI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_jlrtr")

[node name="playing" type="Control" parent="."]
anchors_preset = 0
offset_right = 1280.0
offset_bottom = 720.0

[node name="voyage_tracker" type="Control" parent="playing"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -318.0
offset_top = 50.0
offset_right = -18.0
offset_bottom = 90.0
grow_horizontal = 0

[node name="Label" type="Label" parent="playing/voyage_tracker"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -60.0
offset_bottom = -26.0
grow_horizontal = 2
grow_vertical = 2
text = "Voyage tracker"
label_settings = SubResource("LabelSettings_wsfip")
horizontal_alignment = 1
vertical_alignment = 1

[node name="total" type="ColorRect" parent="playing/voyage_tracker"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="current" type="ColorRect" parent="playing/voyage_tracker"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -20.0
offset_right = 10.0
offset_bottom = 20.0
grow_vertical = 2
color = Color(0.492237, 0.492237, 0.492237, 1)

[node name="ship_health" type="Control" parent="playing"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -150.0
offset_top = 50.0
offset_right = 150.0
offset_bottom = 90.0
grow_horizontal = 2

[node name="Label" type="Label" parent="playing/ship_health"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -60.0
offset_bottom = -26.0
grow_horizontal = 2
grow_vertical = 2
text = "Ship health"
label_settings = SubResource("LabelSettings_wsfip")
horizontal_alignment = 1
vertical_alignment = 1

[node name="total" type="ColorRect" parent="playing/ship_health"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -5.0
offset_bottom = 5.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.729412, 0.729412, 0.729412, 1)

[node name="current" type="ColorRect" parent="playing/ship_health"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -5.0
offset_right = 300.0
offset_bottom = 5.0
grow_vertical = 2

[node name="crew_morale" type="Control" parent="playing"]
layout_mode = 1
anchors_preset = 0
offset_top = 50.0
offset_right = 300.0
offset_bottom = 90.0

[node name="Label" type="Label" parent="playing/crew_morale"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -60.0
offset_bottom = -26.0
grow_horizontal = 2
grow_vertical = 2
text = "Crew morale"
label_settings = SubResource("LabelSettings_wsfip")
horizontal_alignment = 1
vertical_alignment = 1

[node name="happy" type="Sprite2D" parent="playing/crew_morale"]
material = SubResource("ShaderMaterial_lqoyg")
position = Vector2(142.616, 17.8944)
scale = Vector2(0.182596, 0.182596)
texture = ExtResource("1_udgi0")

[node name="ok" type="Sprite2D" parent="playing/crew_morale"]
visible = false
material = SubResource("ShaderMaterial_l7oun")
position = Vector2(142.616, 17.8944)
scale = Vector2(0.182596, 0.182596)
texture = ExtResource("2_jlrtr")

[node name="sad" type="Sprite2D" parent="playing/crew_morale"]
visible = false
material = SubResource("ShaderMaterial_sy17w")
position = Vector2(142.616, 17.8944)
scale = Vector2(0.182596, 0.182596)
texture = ExtResource("3_rsqs2")

[node name="game_over" type="Control" parent="."]
anchors_preset = 0
offset_right = 1280.0
offset_bottom = 720.0

[node name="pause_menu" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 1280.0
offset_bottom = 720.0

[node name="start_menu" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 1280.0
offset_bottom = 720.0

[node name="loadout" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 1280.0
offset_bottom = 720.0

[node name="Control5" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 1280.0
offset_bottom = 720.0
